--- a/SnapConsole/SnapConsole.csproj
+++ b/SnapConsole/SnapConsole.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\CardGamesLibrary\CardGamesLibrary.csproj" />
+    <ProjectReference Include="..\ConsoleLibrary\ConsoleLibrary.csproj" />
     <ProjectReference Include="..\SnapLibrary\SnapLibrary.csproj" />
   </ItemGroup>
 
